feat: add tailwindcss-animate dependency

--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-router-dom": "^7.10.1",
     "tailwind-merge": "^3.4.0",
     "tailwindcss": "^4.1.18",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^4.1.13",
     "zustand": "^5.0.9"
   },
