feat: add Doctors, Profile, and Settings pages for Hospital and Super Admin
- Implemented DoctorsPage for Hospital Admin to manage doctors with search functionality.
- Created ProfilePage for users to manage their account information.
- Developed SettingsPage for users to adjust notification preferences and change passwords.
- Added CreateHospitalPage for Super Admin to register new hospitals with admin credentials.
- Introduced SuperAdminDashboard to provide an overview of hospitals and recent activities.
- Built HospitalsPage for Super Admin to manage hospitals with search and action options.
- Established Zustand stores for authentication and hospital management.
- Defined TypeScript types for appointments, authentication, doctors, and hospitals.
- Updated routing to include new pages and protected routes based on user roles.

--- a/components.json
+++ b/components.json
@@ -12,9 +12,10 @@
   },
   "aliases": {
     "components": "src/components",
-    "utils": "src/lib/utils",
+    "utils": "@/lib/utils",
     "ui": "src/components/ui",
     "lib": "src/lib",
     "hooks": "src/hooks"
-  }
+  },
+  "iconLibrary": "lucide" 
 }
